# sdl-test

./: .gitignore  AUTHORS  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
src/: CApp.cpp  CApp.h  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  Makefile  Makefile.am  Makefile.in
